// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Button Custom Class 1`] = `
<button
  class="btn-prm-md-reg btn-dis"
>
  fake disabled
</button>
`;

exports[`Storyshots Components/Button Default 1`] = `
<button
  class="btn-prm-md-reg "
/>
`;

exports[`Storyshots Components/Button Disabled 1`] = `
<button
  class="btn-prm-dis-md-reg "
>
  disabled
</button>
`;

exports[`Storyshots Components/Button Large 1`] = `
<button
  class="btn-prm-lg-reg "
>
  Large Button !!!
</button>
`;

exports[`Storyshots Components/Button Medium 1`] = `
<button
  class="btn-prm-md-reg "
>
  Medium Btn
</button>
`;

exports[`Storyshots Components/Button Primary 1`] = `
<button
  class="btn-prm-md-reg "
>
  Primary
</button>
`;

exports[`Storyshots Components/Button Secondary 1`] = `
<button
  class="btn-sec-md-reg "
>
  Secondary
</button>
`;

exports[`Storyshots Components/Button Small 1`] = `
<button
  class="btn-prm-sm-reg "
>
  Small
</button>
`;

exports[`Storyshots Components/Button Square 1`] = `
<button
  class="btn-prm-sq-reg "
>
  OK
</button>
`;

exports[`Storyshots Components/Button Thin 1`] = `
<button
  class="btn-prm-md-thn "
/>
`;

exports[`Storyshots Components/Card Default 1`] = `
<div
  class="card card-md"
  style="width: 200px;"
>
  <svg
    class="card-cover"
    fill="black"
    preserveAspectRatio="xMinYMin slice"
    stroke="black"
  >
    placeholder.svg
  </svg>
  <div
    class="card-divider"
  />
  <div
    class="card-container"
  >
    <h3
      class="card-title"
    >
      Title
    </h3>
    <div
      class="card-content-text"
    >
      Labore odio voluptas voluptas vel qui vel. Aut est quo. Eveniet non tempore incidunt eum vero. Quia tempore error neque nam et numquam quidem. Amet voluptas delectus quisquam architecto numquam quia et impedit eos. Excepturi aliquid eum.
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Card With Cover 1`] = `
<div
  class="card card-md"
  style="width: 200px;"
>
  <img
    alt="card img"
    class="card-cover"
    src="/regular-cover.png"
  />
  <div
    class="card-divider"
  />
  <div
    class="card-container"
  >
    <h3
      class="card-title"
    >
      Title
    </h3>
    <div
      class="card-content-text"
    >
      Labore odio voluptas voluptas vel qui vel. Aut est quo. Eveniet non tempore incidunt eum vero. Quia tempore error neque nam et numquam quidem. Amet voluptas delectus quisquam architecto numquam quia et impedit eos. Excepturi aliquid eum.
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Card With Custom Children 1`] = `
<div
  class="card card-md"
  style="width: 200px;"
>
  <svg
    class="card-cover"
    fill="black"
    preserveAspectRatio="xMinYMin slice"
    stroke="black"
  >
    placeholder.svg
  </svg>
  <div
    class="card-divider"
  />
  <div
    class="card-container"
  >
    <div
      style="background-color: blue; color: white; border-radius: 10px; text-align: center;"
    >
      Custom stuff
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Card With Custom Content 1`] = `
<div
  class="card card-md"
  style="width: 200px;"
>
  <svg
    class="card-cover"
    fill="black"
    preserveAspectRatio="xMinYMin slice"
    stroke="black"
  >
    placeholder.svg
  </svg>
  <div
    class="card-divider"
  />
  <div
    class="card-container-no-text"
  >
    <h3
      class="card-title"
    >
      Title
    </h3>
    <div
      style="background-color: blue; color: white; border-radius: 10px; text-align: center;"
    >
      Custom content
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Card With Horizontal Cover 1`] = `
<div
  class="card card-md"
  style="width: 200px;"
>
  <img
    alt="card img"
    class="card-cover"
    src="/horizontal-cover.png"
  />
  <div
    class="card-divider"
  />
  <div
    class="card-container"
  >
    <h3
      class="card-title"
    >
      Title
    </h3>
    <div
      class="card-content-text"
    >
      Labore odio voluptas voluptas vel qui vel. Aut est quo. Eveniet non tempore incidunt eum vero. Quia tempore error neque nam et numquam quidem. Amet voluptas delectus quisquam architecto numquam quia et impedit eos. Excepturi aliquid eum.
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Card With Long Title 1`] = `
<div
  class="card card-md"
  style="width: 200px;"
>
  <svg
    class="card-cover"
    fill="black"
    preserveAspectRatio="xMinYMin slice"
    stroke="black"
  >
    placeholder.svg
  </svg>
  <div
    class="card-divider"
  />
  <div
    class="card-container"
  >
    <h3
      class="card-title"
    >
      Hello this is long title
    </h3>
    <div
      class="card-content-text"
    >
      Labore odio voluptas voluptas vel qui vel. Aut est quo. Eveniet non tempore incidunt eum vero. Quia tempore error neque nam et numquam quidem. Amet voluptas delectus quisquam architecto numquam quia et impedit eos. Excepturi aliquid eum.
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Card With Vertical Cover 1`] = `
<div
  class="card card-md"
  style="width: 200px;"
>
  <img
    alt="card img"
    class="card-cover"
    src="/vertical-cover.png"
  />
  <div
    class="card-divider"
  />
  <div
    class="card-container"
  >
    <h3
      class="card-title"
    >
      Title
    </h3>
    <div
      class="card-content-text"
    >
      Labore odio voluptas voluptas vel qui vel. Aut est quo. Eveniet non tempore incidunt eum vero. Quia tempore error neque nam et numquam quidem. Amet voluptas delectus quisquam architecto numquam quia et impedit eos. Excepturi aliquid eum.
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/EditableCard Default 1`] = `
<div
  class="card card-md card-noimage editable-card"
  style="width: 200px;"
>
  <div
    class="card-container-no-text"
  >
    <textarea
      class="tinput-md"
      placeholder=""
      rows="14"
    />
  </div>
</div>
`;

exports[`Storyshots Components/EditableCard Large 1`] = `
<div
  class="card card-lg card-noimage editable-card"
  style="width: 200px;"
>
  <div
    class="card-container-no-text"
  >
    <textarea
      class="tinput-md"
      placeholder=""
      rows="26"
    />
  </div>
</div>
`;

exports[`Storyshots Components/EditableCard Large With Title 1`] = `
<div
  class="card card-lg card-noimage editable-card"
  style="width: 200px;"
>
  <div
    class="card-container-no-text"
  >
    <input
      class="tinput-md title"
      value=""
    />
    <textarea
      class="tinput-md"
      placeholder=""
      rows="24"
    />
  </div>
</div>
`;

exports[`Storyshots Components/EditableCard Medium 1`] = `
<div
  class="card card-md card-noimage editable-card"
  style="width: 200px;"
>
  <div
    class="card-container-no-text"
  >
    <textarea
      class="tinput-md"
      placeholder=""
      rows="14"
    />
  </div>
</div>
`;

exports[`Storyshots Components/EditableCard Small 1`] = `
<div
  class="card card-sm card-noimage editable-card"
  style="width: 200px;"
>
  <div
    class="card-container-no-text"
  >
    <textarea
      class="tinput-md"
      placeholder=""
      rows="3"
    />
  </div>
</div>
`;

exports[`Storyshots Components/EditableCard Small With A Button 1`] = `
<div
  class="card card-sm card-noimage editable-card"
  style="width: 200px;"
>
  <div
    class="card-container-no-text"
  >
    <textarea
      class="tinput-md"
      placeholder=""
      rows="1"
    />
    <div
      class="btn-container"
    >
      <button
        class="btn-prm-md-thn "
      >
        click me
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/EditableCard Small With Title 1`] = `
<div
  class="card card-sm card-noimage editable-card"
  style="width: 200px;"
>
  <div
    class="card-container-no-text"
  >
    <textarea
      class="tinput-md"
      placeholder=""
      rows="3"
    />
  </div>
</div>
`;

exports[`Storyshots Components/EditableCard With A Button 1`] = `
<div
  class="card card-md card-noimage editable-card"
  style="width: 200px;"
>
  <div
    class="card-container-no-text"
  >
    <textarea
      class="tinput-md"
      placeholder=""
      rows="12"
    />
    <div
      class="btn-container"
    >
      <button
        class="btn-prm-md-thn "
      >
        click me
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/EditableCard With Title 1`] = `
<div
  class="card card-md card-noimage editable-card"
  style="width: 200px;"
>
  <div
    class="card-container-no-text"
  >
    <input
      class="tinput-md title"
      value=""
    />
    <textarea
      class="tinput-md"
      placeholder=""
      rows="12"
    />
  </div>
</div>
`;

exports[`Storyshots Components/EditableCard With Two Buttons 1`] = `
<div
  class="card card-md card-noimage editable-card"
  style="width: 200px;"
>
  <div
    class="card-container-no-text"
  >
    <textarea
      class="tinput-md"
      placeholder=""
      rows="12"
    />
    <div
      class="btn-container"
    >
      <button
        class="btn-sec-sm-thn "
      >
        cancel
      </button>
      <button
        class="btn-prm-sm-thn "
      >
        ok
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/GhostCard Default 1`] = `
<div
  class="card card-md ghost-card"
  style="width: 200px;"
>
  <svg
    class="card-cover"
    fill="black"
    preserveAspectRatio="xMinYMin slice"
    stroke="black"
  >
    placeholder.svg
  </svg>
  <div
    class="card-divider"
  />
  <div
    class="card-container-no-text"
  >
    <div
      class="ghost-card-text-container"
    >
      <b
        class="ghost-card-text"
      >
        Add a new asdf...
      </b>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/GhostCard Large 1`] = `
<div
  class="card card-lg ghost-card"
  style="width: 200px;"
>
  <svg
    class="card-cover"
    fill="black"
    preserveAspectRatio="xMinYMin slice"
    stroke="black"
  >
    placeholder.svg
  </svg>
  <div
    class="card-divider"
  />
  <div
    class="card-container-no-text"
  >
    <div
      class="ghost-card-text-container"
    >
      <b
        class="ghost-card-text"
      >
        Add a new asdf...
      </b>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/GhostCard No Image 1`] = `
<div
  class="card card-md ghost-card"
  style="width: 200px;"
>
  <svg
    class="card-cover"
    fill="black"
    preserveAspectRatio="xMinYMin slice"
    stroke="black"
  >
    placeholder.svg
  </svg>
  <div
    class="card-divider"
  />
  <div
    class="card-container-no-text"
  >
    <div
      class="ghost-card-text-container"
    >
      <b
        class="ghost-card-text"
      >
        Add a new asdf...
      </b>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/GhostCard Small 1`] = `
<div
  class="card card-sm card-noimage ghost-card"
  style="width: 200px;"
>
  <div
    class="card-container-no-text"
  >
    <div
      class="ghost-card-text-container"
    >
      <b
        class="ghost-card-text"
      >
        Add a new asdf...
      </b>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/NoteCard Default 1`] = `
<div
  data-rbd-droppable-context-id="0"
  data-rbd-droppable-id="1"
  style="width: 200px;"
>
  <div
    aria-describedby="rbd-hidden-text-0-hidden-text-0"
    class="card card-sm card-noimage note"
    data-rbd-drag-handle-context-id="0"
    data-rbd-drag-handle-draggable-id="1"
    data-rbd-draggable-context-id="0"
    data-rbd-draggable-id="1"
    draggable="false"
    role="button"
    tabindex="0"
  >
    <div
      class="card-container-no-text"
    >
      <h3
        class="card-title"
      >
        Buy Groceries
      </h3>
      <div
        style="display: flex; flex-direction: column; flex-grow: 1;"
      >
        <div
          class="note-card-description card-content-text"
        >
          eggs, chicken, tomatoes, green onion
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/NoteCard Due In 3 Days 1`] = `
<div
  data-rbd-droppable-context-id="1"
  data-rbd-droppable-id="1"
  style="width: 200px;"
>
  <div
    aria-describedby="rbd-hidden-text-1-hidden-text-3"
    class="card card-sm card-noimage note"
    data-rbd-drag-handle-context-id="1"
    data-rbd-drag-handle-draggable-id="1"
    data-rbd-draggable-context-id="1"
    data-rbd-draggable-id="1"
    draggable="false"
    role="button"
    tabindex="0"
  >
    <div
      class="card-container-no-text"
    >
      <h3
        class="card-title"
      >
        Name
      </h3>
      <div
        style="display: flex; flex-direction: column; flex-grow: 1;"
      >
        <div
          class="note-card-description card-content-text"
        >
          Description
        </div>
        <div
          class="due"
        >
          due in
           
          <span
            class="due-soon"
          >
            3 days
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/NoteCard Due In 5 Days 1`] = `
<div
  data-rbd-droppable-context-id="2"
  data-rbd-droppable-id="1"
  style="width: 200px;"
>
  <div
    aria-describedby="rbd-hidden-text-2-hidden-text-6"
    class="card card-sm card-noimage note"
    data-rbd-drag-handle-context-id="2"
    data-rbd-drag-handle-draggable-id="1"
    data-rbd-draggable-context-id="2"
    data-rbd-draggable-id="1"
    draggable="false"
    role="button"
    tabindex="0"
  >
    <div
      class="card-container-no-text"
    >
      <h3
        class="card-title"
      >
        Name
      </h3>
      <div
        style="display: flex; flex-direction: column; flex-grow: 1;"
      >
        <div
          class="note-card-description card-content-text"
        >
          Description
        </div>
        <div
          class="due"
        >
          due in
           
          <span
            class="due-far"
          >
            5 days
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/NoteCard Due Today 1`] = `
<div
  data-rbd-droppable-context-id="3"
  data-rbd-droppable-id="1"
  style="width: 200px;"
>
  <div
    aria-describedby="rbd-hidden-text-3-hidden-text-9"
    class="card card-sm card-noimage note"
    data-rbd-drag-handle-context-id="3"
    data-rbd-drag-handle-draggable-id="1"
    data-rbd-draggable-context-id="3"
    data-rbd-draggable-id="1"
    draggable="false"
    role="button"
    tabindex="0"
  >
    <div
      class="card-container-no-text"
    >
      <h3
        class="card-title"
      >
        Name
      </h3>
      <div
        style="display: flex; flex-direction: column; flex-grow: 1;"
      >
        <div
          class="note-card-description card-content-text"
        >
          Description
        </div>
        <div
          class="due"
        >
          due
           
          <span
            class="due-very-soon"
          >
            today
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/NoteCard Due Tomorrow 1`] = `
<div
  data-rbd-droppable-context-id="4"
  data-rbd-droppable-id="1"
  style="width: 200px;"
>
  <div
    aria-describedby="rbd-hidden-text-4-hidden-text-12"
    class="card card-sm card-noimage note"
    data-rbd-drag-handle-context-id="4"
    data-rbd-drag-handle-draggable-id="1"
    data-rbd-draggable-context-id="4"
    data-rbd-draggable-id="1"
    draggable="false"
    role="button"
    tabindex="0"
  >
    <div
      class="card-container-no-text"
    >
      <h3
        class="card-title"
      >
        Name
      </h3>
      <div
        style="display: flex; flex-direction: column; flex-grow: 1;"
      >
        <div
          class="note-card-description card-content-text"
        >
          Description
        </div>
        <div
          class="due"
        >
          due
           
          <span
            class="due-very-soon"
          >
            tomorrow
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/NoteCard Long Desctription 1`] = `
<div
  data-rbd-droppable-context-id="5"
  data-rbd-droppable-id="1"
  style="width: 200px;"
>
  <div
    aria-describedby="rbd-hidden-text-5-hidden-text-15"
    class="card card-sm card-noimage note"
    data-rbd-drag-handle-context-id="5"
    data-rbd-drag-handle-draggable-id="1"
    data-rbd-draggable-context-id="5"
    data-rbd-draggable-id="1"
    draggable="false"
    role="button"
    tabindex="0"
  >
    <div
      class="card-container-no-text"
    >
      <h3
        class="card-title"
      >
        Name is short
      </h3>
      <div
        style="display: flex; flex-direction: column; flex-grow: 1;"
      >
        <div
          class="note-card-description card-content-text"
        >
          description is very very very very very very very very very very very very long
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/NoteCard Long Name 1`] = `
<div
  data-rbd-droppable-context-id="6"
  data-rbd-droppable-id="1"
  style="width: 200px;"
>
  <div
    aria-describedby="rbd-hidden-text-6-hidden-text-18"
    class="card card-sm card-noimage note"
    data-rbd-drag-handle-context-id="6"
    data-rbd-drag-handle-draggable-id="1"
    data-rbd-draggable-context-id="6"
    data-rbd-draggable-id="1"
    draggable="false"
    role="button"
    tabindex="0"
  >
    <div
      class="card-container-no-text"
    >
      <h3
        class="card-title"
      >
        hello my name is asdf nice to meet you
      </h3>
      <div
        style="display: flex; flex-direction: column; flex-grow: 1;"
      >
        <div
          class="note-card-description card-content-text"
        >
          description
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/NoteCard One Day Past Due 1`] = `
<div
  data-rbd-droppable-context-id="7"
  data-rbd-droppable-id="1"
  style="width: 200px;"
>
  <div
    aria-describedby="rbd-hidden-text-7-hidden-text-21"
    class="card card-sm card-noimage note"
    data-rbd-drag-handle-context-id="7"
    data-rbd-drag-handle-draggable-id="1"
    data-rbd-draggable-context-id="7"
    data-rbd-draggable-id="1"
    draggable="false"
    role="button"
    tabindex="0"
  >
    <div
      class="card-container-no-text"
    >
      <h3
        class="card-title"
      >
        Name
      </h3>
      <div
        style="display: flex; flex-direction: column; flex-grow: 1;"
      >
        <div
          class="note-card-description card-content-text"
        >
          Description
        </div>
        <div
          class="due"
        >
          <span
            class="due-past"
          >
            1 day
             past due
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/NotesList Default 1`] = `
<div
  class="notes-list"
  data-rbd-droppable-context-id="8"
  data-rbd-droppable-id="60c5d161a6c781e43c11a5a3"
>
  <span
    class="notes-list-name"
  >
    List 1
  </span>
  <div
    aria-describedby="rbd-hidden-text-8-hidden-text-24"
    class="card card-sm card-noimage note"
    data-rbd-drag-handle-context-id="8"
    data-rbd-drag-handle-draggable-id="60c5d167a6c781e43c11a5a4"
    data-rbd-draggable-context-id="8"
    data-rbd-draggable-id="60c5d167a6c781e43c11a5a4"
    draggable="false"
    role="button"
    tabindex="0"
  >
    <div
      class="card-container-no-text"
    >
      <h3
        class="card-title"
      >
        Note Something
      </h3>
      <div
        style="display: flex; flex-direction: column; flex-grow: 1;"
      >
        <div
          class="note-card-description card-content-text"
        >
          Buy something
        </div>
      </div>
    </div>
  </div>
  <div
    aria-describedby="rbd-hidden-text-8-hidden-text-24"
    class="card card-sm card-noimage note"
    data-rbd-drag-handle-context-id="8"
    data-rbd-drag-handle-draggable-id="6106f35927d5f4001d197e65"
    data-rbd-draggable-context-id="8"
    data-rbd-draggable-id="6106f35927d5f4001d197e65"
    draggable="false"
    role="button"
    tabindex="0"
  >
    <div
      class="card-container-no-text"
    >
      <h3
        class="card-title"
      >
        Delete me
      </h3>
      <div
        style="display: flex; flex-direction: column; flex-grow: 1;"
      >
        <div
          class="note-card-description card-content-text"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/NotesList Empty 1`] = `
<div
  class="notes-list"
  data-rbd-droppable-context-id="9"
  data-rbd-droppable-id="1"
>
  <span
    class="notes-list-name"
  >
    List aa
  </span>
  <span
    class="notes-list-empty-msg"
  >
    Nothing here yet.
  </span>
</div>
`;

exports[`Storyshots Components/TextInput Bigger Multiline 1`] = `
<div
  style="padding: 20px; border: 2px solid black; width: 400px;"
>
  <textarea
    class="tinput-md"
    rows="6"
  />
</div>
`;

exports[`Storyshots Components/TextInput Default 1`] = `
<div
  style="padding: 20px; border: 2px solid black; width: 400px;"
>
  <input
    class="tinput-md"
    value=""
  />
</div>
`;

exports[`Storyshots Components/TextInput In A Tight Container 1`] = `
<div
  style="border: 2px solid black; width: 100px; padding: 10px;"
>
  <input
    class="tinput-md"
    value=""
  />
</div>
`;

exports[`Storyshots Components/TextInput Large Font 1`] = `
<div
  style="padding: 20px; border: 2px solid black; width: 400px;"
>
  <input
    class="tinput-lg"
    value=""
  />
</div>
`;

exports[`Storyshots Components/TextInput Multiline 1`] = `
<div
  style="padding: 20px; border: 2px solid black; width: 400px;"
>
  <textarea
    class="tinput-md"
  />
</div>
`;

exports[`Storyshots Components/TextInput Multiline With Placeholder 1`] = `
<div
  style="padding: 20px; border: 2px solid black; width: 400px;"
>
  <textarea
    class="tinput-md"
    placeholder="Type something long here..."
  />
</div>
`;

exports[`Storyshots Components/TextInput Single Line With Rows Specified 1`] = `
<div
  style="padding: 20px; border: 2px solid black; width: 400px;"
>
  <input
    class="tinput-md"
    rows="5"
    value=""
  />
</div>
`;

exports[`Storyshots Components/TextInput With Placeholder 1`] = `
<div
  style="padding: 20px; border: 2px solid black; width: 400px;"
>
  <input
    class="tinput-md"
    placeholder="Enter something..."
    value=""
  />
</div>
`;

exports[`Storyshots Components/WarningFab Always Display 1`] = `
<div
  class="warningFab"
  style="display: block;"
>
  <img
    alt="warning icon"
    class="icon"
    src="warning.svg"
  />
</div>
`;

exports[`Storyshots Components/WarningFab Default 1`] = `
<div
  class="warningFab"
  style="display: none;"
>
  <img
    alt="warning icon"
    class="icon"
    src="warning.svg"
  />
</div>
`;

exports[`Storyshots Components/WarningFab Display On Message 1`] = `
<div
  class="warningFab"
  style="display: block;"
>
  <img
    alt="warning icon"
    class="icon"
    src="warning.svg"
  />
</div>
`;

exports[`Storyshots Components/WarningFab Display On Message No Message 1`] = `
<div
  class="warningFab"
  style="display: none;"
>
  <img
    alt="warning icon"
    class="icon"
    src="warning.svg"
  />
</div>
`;

exports[`Storyshots Components/WarningFab With Custom Action 1`] = `
<div
  class="warningFab"
  style="display: block;"
>
  <img
    alt="warning icon"
    class="icon"
    src="warning.svg"
  />
</div>
`;
